fix: ui bug on ios

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ code {
 }
 
 #root {
+  position: relative;
   height: 100vh;
   display: flex;
   flex-direction: column;
